REGRESSION (r277683): WebContent process crashing in unit tests https://bugs.webkit.org/show_bug.cgi?id=225955 rdar://78184041

Unreviewed partial revert.

* Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.h:
(WebKit::XPCServiceInitializer):
Revert the CRASH() part of r277683 because it is causing mysterious unit testing failures.


Canonical link: https://commits.webkit.org/237891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277710 268f45cc-cd09-0410-ab3c-d52691b4dbfc